Bug 1343432 - Update jemalloc 4 to version 4.5.0. r=glandium
UltraBlame original commit: 24bea8bde57dcc65ff50b0f349134231372a9091

--- a/memory/jemalloc/src/Makefile.in
+++ b/memory/jemalloc/src/Makefile.in
@@ -128,6 +128,14 @@ I
 objroot
 )
 include
+CONFIGURE_CFLAGS
+:
+=
+CONFIGURE_CFLAGS
+SPECIFIED_CFLAGS
+:
+=
+SPECIFIED_CFLAGS
 EXTRA_CFLAGS
 :
 =
@@ -135,9 +143,17 @@ EXTRA_CFLAGS
 CFLAGS
 :
 =
-CFLAGS
+(
+strip
+(
+CONFIGURE_CFLAGS
+)
+(
+SPECIFIED_CFLAGS
+)
 (
 EXTRA_CFLAGS
+)
 )
 LDFLAGS
 :
@@ -1162,6 +1178,17 @@ test
 /
 unit
 /
+extent_quantize
+.
+c
+\
+(
+srcroot
+)
+test
+/
+unit
+/
 fork
 .
 c
@@ -1482,6 +1509,17 @@ test
 unit
 /
 stats
+.
+c
+\
+(
+srcroot
+)
+test
+/
+unit
+/
+stats_print
 .
 c
 \
