--- a/memory/jemalloc/src/configure.ac
+++ b/memory/jemalloc/src/configure.ac
@@ -109,14 +109,202 @@ macro
 definitions
 .
 dnl
-JE_CFLAGS_APPEND
+JE_CONCAT_VVV
 (
-cflag
+r
+a
+b
 )
+dnl
+dnl
+Set
+r
+to
+the
+concatenation
+of
+a
+and
+b
+with
+a
+space
+separating
+them
+iff
+dnl
+both
+a
+and
+b
+are
+non
+-
+emty
+.
 AC_DEFUN
 (
 [
-JE_CFLAGS_APPEND
+JE_CONCAT_VVV
+]
+if
+test
+"
+x
+[
+]
+{
+2
+}
+"
+=
+"
+x
+"
+-
+o
+"
+x
+[
+]
+{
+3
+}
+"
+=
+"
+x
+"
+;
+then
+1
+=
+"
+[
+]
+{
+2
+}
+[
+]
+{
+3
+}
+"
+else
+1
+=
+"
+[
+]
+{
+2
+}
+[
+]
+{
+3
+}
+"
+fi
+)
+dnl
+JE_APPEND_VS
+(
+a
+b
+)
+dnl
+dnl
+Set
+a
+to
+the
+concatenation
+of
+a
+and
+b
+with
+a
+space
+separating
+them
+iff
+dnl
+both
+a
+and
+b
+are
+non
+-
+empty
+.
+AC_DEFUN
+(
+[
+JE_APPEND_VS
+]
+T_APPEND_V
+=
+2
+JE_CONCAT_VVV
+(
+1
+1
+T_APPEND_V
+)
+)
+CONFIGURE_CFLAGS
+=
+SPECIFIED_CFLAGS
+=
+"
+{
+CFLAGS
+}
+"
+dnl
+JE_CFLAGS_ADD
+(
+cflag
+)
+dnl
+dnl
+CFLAGS
+is
+the
+concatenation
+of
+CONFIGURE_CFLAGS
+and
+SPECIFIED_CFLAGS
+dnl
+(
+ignoring
+EXTRA_CFLAGS
+which
+does
+not
+impact
+configure
+tests
+.
+This
+macro
+dnl
+appends
+to
+CONFIGURE_CFLAGS
+and
+regenerates
+CFLAGS
+.
+AC_DEFUN
+(
+[
+JE_CFLAGS_ADD
 ]
 [
 AC_MSG_CHECKING
@@ -128,42 +316,24 @@ supports
 1
 ]
 )
-TCFLAGS
+T_CONFIGURE_CFLAGS
 =
 "
 {
-CFLAGS
+CONFIGURE_CFLAGS
 }
 "
-if
-test
-"
-x
-{
-CFLAGS
-}
-"
-=
-"
-x
-"
-;
-then
-CFLAGS
-=
-"
+JE_APPEND_VS
+(
+CONFIGURE_CFLAGS
 1
-"
-else
+)
+JE_CONCAT_VVV
+(
 CFLAGS
-=
-"
-{
-CFLAGS
-}
-1
-"
-fi
+CONFIGURE_CFLAGS
+SPECIFIED_CFLAGS
+)
 AC_COMPILE_IFELSE
 (
 [
@@ -183,7 +353,7 @@ return
 )
 ]
 [
-je_cv_cflags_appended
+je_cv_cflags_added
 =
 1
 ]
@@ -194,7 +364,7 @@ yes
 ]
 )
 [
-je_cv_cflags_appended
+je_cv_cflags_added
 =
 ]
 AC_MSG_RESULT
@@ -204,16 +374,74 @@ no
 ]
 )
 [
-CFLAGS
+CONFIGURE_CFLAGS
 =
 "
 {
-TCFLAGS
+T_CONFIGURE_CFLAGS
 }
 "
 ]
 )
+JE_CONCAT_VVV
+(
+CFLAGS
+CONFIGURE_CFLAGS
+SPECIFIED_CFLAGS
+)
 ]
+)
+dnl
+JE_CFLAGS_SAVE
+(
+)
+dnl
+JE_CFLAGS_RESTORE
+(
+)
+dnl
+dnl
+Save
+/
+restore
+CFLAGS
+.
+Nesting
+is
+not
+supported
+.
+AC_DEFUN
+(
+[
+JE_CFLAGS_SAVE
+]
+SAVED_CONFIGURE_CFLAGS
+=
+"
+{
+CONFIGURE_CFLAGS
+}
+"
+)
+AC_DEFUN
+(
+[
+JE_CFLAGS_RESTORE
+]
+CONFIGURE_CFLAGS
+=
+"
+{
+SAVED_CONFIGURE_CFLAGS
+}
+"
+JE_CONCAT_VVV
+(
+CFLAGS
+CONFIGURE_CFLAGS
+SPECIFIED_CFLAGS
+)
 )
 dnl
 JE_COMPILABLE
@@ -1092,23 +1320,6 @@ if
 test
 "
 x
-CFLAGS
-"
-=
-"
-x
-"
-;
-then
-no_CFLAGS
-=
-"
-yes
-"
-if
-test
-"
-x
 GCC
 "
 =
@@ -1117,7 +1328,7 @@ xyes
 "
 ;
 then
-JE_CFLAGS_APPEND
+JE_CFLAGS_ADD
 (
 [
 -
@@ -1130,7 +1341,7 @@ if
 test
 "
 x
-je_cv_cflags_appended
+je_cv_cflags_added
 "
 =
 "
@@ -1149,7 +1360,7 @@ JEMALLOC_HAS_RESTRICT
 ]
 )
 else
-JE_CFLAGS_APPEND
+JE_CFLAGS_ADD
 (
 [
 -
@@ -1162,7 +1373,7 @@ if
 test
 "
 x
-je_cv_cflags_appended
+je_cv_cflags_added
 "
 =
 "
@@ -1182,14 +1393,14 @@ JEMALLOC_HAS_RESTRICT
 )
 fi
 fi
-JE_CFLAGS_APPEND
+JE_CFLAGS_ADD
 (
 [
 -
 Wall
 ]
 )
-JE_CFLAGS_APPEND
+JE_CFLAGS_ADD
 (
 [
 -
@@ -1202,7 +1413,7 @@ after
 statement
 ]
 )
-JE_CFLAGS_APPEND
+JE_CFLAGS_ADD
 (
 [
 -
@@ -1215,7 +1426,7 @@ to
 32
 ]
 )
-JE_CFLAGS_APPEND
+JE_CFLAGS_ADD
 (
 [
 -
@@ -1224,14 +1435,14 @@ Wsign
 compare
 ]
 )
-JE_CFLAGS_APPEND
+JE_CFLAGS_ADD
 (
 [
 -
 pipe
 ]
 )
-JE_CFLAGS_APPEND
+JE_CFLAGS_ADD
 (
 [
 -
@@ -1257,37 +1468,36 @@ CC
 -
 nologo
 "
-JE_CFLAGS_APPEND
+JE_CFLAGS_ADD
 (
 [
 -
 Zi
 ]
 )
-JE_CFLAGS_APPEND
+JE_CFLAGS_ADD
 (
 [
 -
 MT
 ]
 )
-JE_CFLAGS_APPEND
+JE_CFLAGS_ADD
 (
 [
 -
 W3
 ]
 )
-JE_CFLAGS_APPEND
+JE_CFLAGS_ADD
 (
 [
 -
 FS
 ]
 )
-CPPFLAGS
-=
-"
+JE_APPEND_VS
+(
 CPPFLAGS
 -
 I
@@ -1298,7 +1508,7 @@ srcdir
 include
 /
 msvc_compat
-"
+)
 fi
 if
 test
@@ -1334,14 +1544,14 @@ xyes
 "
 ;
 then
-JE_CFLAGS_APPEND
+JE_CFLAGS_ADD
 (
 [
 -
 hipa2
 ]
 )
-JE_CFLAGS_APPEND
+JE_CFLAGS_ADD
 (
 [
 -
@@ -1367,7 +1577,7 @@ ignore
 unreachable
 code
 warning
-JE_CFLAGS_APPEND
+JE_CFLAGS_ADD
 (
 [
 -
@@ -1388,7 +1598,7 @@ free
 "
 etc
 warning
-JE_CFLAGS_APPEND
+JE_CFLAGS_ADD
 (
 [
 -
@@ -1399,7 +1609,18 @@ hnomessage
 )
 fi
 fi
-fi
+AC_SUBST
+(
+[
+CONFIGURE_CFLAGS
+]
+)
+AC_SUBST
+(
+[
+SPECIFIED_CFLAGS
+]
+)
 AC_SUBST
 (
 [
@@ -1469,9 +1690,8 @@ xno
 "
 ;
 then
-CPPFLAGS
-=
-"
+JE_APPEND_VS
+(
 CPPFLAGS
 -
 I
@@ -1484,7 +1704,7 @@ include
 msvc_compat
 /
 C99
-"
+)
 fi
 if
 test
@@ -2298,11 +2518,6 @@ make
 happen
 otherwise
 .
-CFLAGS
-=
-"
-CFLAGS
-"
 default_munmap
 =
 "
@@ -2497,13 +2712,12 @@ exposed
 by
 _GNU_SOURCE
 .
-CPPFLAGS
-=
-"
+JE_APPEND_VS
+(
 CPPFLAGS
 -
 D_GNU_SOURCE
-"
+)
 abi
 =
 "
@@ -2578,13 +2792,12 @@ exposed
 by
 _GNU_SOURCE
 .
-CPPFLAGS
-=
-"
+JE_APPEND_VS
+(
 CPPFLAGS
 -
 D_GNU_SOURCE
-"
+)
 abi
 =
 "
@@ -2721,16 +2934,14 @@ sigwait
 (
 )
 .
-CPPFLAGS
-=
-"
+JE_APPEND_VS
+(
 CPPFLAGS
 -
 D_POSIX_PTHREAD_SEMANTICS
-"
-LIBS
-=
-"
+)
+JE_APPEND_VS
+(
 LIBS
 -
 lposix4
@@ -2738,7 +2949,7 @@ lposix4
 lsocket
 -
 lnsl
-"
+)
 ;
 ;
 *
@@ -3301,7 +3512,7 @@ xelf
 "
 ;
 then
-JE_CFLAGS_APPEND
+JE_CFLAGS_ADD
 (
 [
 -
@@ -3328,21 +3539,17 @@ lacks
 support
 )
 .
-SAVED_CFLAGS
-=
-"
-{
-CFLAGS
-}
-"
-JE_CFLAGS_APPEND
+JE_CFLAGS_SAVE
+(
+)
+JE_CFLAGS_ADD
 (
 [
 -
 Werror
 ]
 )
-JE_CFLAGS_APPEND
+JE_CFLAGS_ADD
 (
 [
 -
@@ -3386,13 +3593,9 @@ foo
 je_cv_tls_model
 ]
 )
-CFLAGS
-=
-"
-{
-SAVED_CFLAGS
-}
-"
+JE_CFLAGS_RESTORE
+(
+)
 if
 test
 "
@@ -3445,21 +3648,17 @@ alloc_size
 attribute
 support
 .
-SAVED_CFLAGS
-=
-"
-{
-CFLAGS
-}
-"
-JE_CFLAGS_APPEND
+JE_CFLAGS_SAVE
+(
+)
+JE_CFLAGS_ADD
 (
 [
 -
 Werror
 ]
 )
-JE_CFLAGS_APPEND
+JE_CFLAGS_ADD
 (
 [
 -
@@ -3504,13 +3703,9 @@ alloc_size
 je_cv_alloc_size
 ]
 )
-CFLAGS
-=
-"
-{
-SAVED_CFLAGS
-}
-"
+JE_CFLAGS_RESTORE
+(
+)
 if
 test
 "
@@ -3547,21 +3742,17 @@ gnu_printf
 attribute
 support
 .
-SAVED_CFLAGS
-=
-"
-{
-CFLAGS
-}
-"
-JE_CFLAGS_APPEND
+JE_CFLAGS_SAVE
+(
+)
+JE_CFLAGS_ADD
 (
 [
 -
 Werror
 ]
 )
-JE_CFLAGS_APPEND
+JE_CFLAGS_ADD
 (
 [
 -
@@ -3619,13 +3810,9 @@ gnu_printf
 je_cv_format_gnu_printf
 ]
 )
-CFLAGS
-=
-"
-{
-SAVED_CFLAGS
-}
-"
+JE_CFLAGS_RESTORE
+(
+)
 if
 test
 "
@@ -3662,21 +3849,17 @@ printf
 attribute
 support
 .
-SAVED_CFLAGS
-=
-"
-{
-CFLAGS
-}
-"
-JE_CFLAGS_APPEND
+JE_CFLAGS_SAVE
+(
+)
+JE_CFLAGS_ADD
 (
 [
 -
 Werror
 ]
 )
-JE_CFLAGS_APPEND
+JE_CFLAGS_ADD
 (
 [
 -
@@ -3734,13 +3917,9 @@ printf
 je_cv_format_printf
 ]
 )
-CFLAGS
-=
-"
-{
-SAVED_CFLAGS
-}
-"
+JE_CFLAGS_RESTORE
+(
+)
 if
 test
 "
@@ -4160,7 +4339,7 @@ xyes
 "
 ;
 then
-JE_CFLAGS_APPEND
+JE_CFLAGS_ADD
 (
 [
 -
@@ -4168,7 +4347,7 @@ O0
 ]
 )
 fi
-JE_CFLAGS_APPEND
+JE_CFLAGS_ADD
 (
 [
 -
@@ -6008,72 +6187,6 @@ enable_debug
 "
 x0
 "
--
-a
-"
-x
-no_CFLAGS
-"
-=
-"
-xyes
-"
-;
-then
-dnl
-Make
-sure
-that
-an
-optimization
-flag
-was
-not
-specified
-in
-EXTRA_CFLAGS
-.
-optimize
-=
-"
-no
-"
-echo
-"
-CFLAGS
-EXTRA_CFLAGS
-"
-|
-grep
-'
-\
--
-O
-'
->
-/
-dev
-/
-null
-|
-|
-optimize
-=
-"
-yes
-"
-if
-test
-"
-x
-{
-optimize
-}
-"
-=
-"
-xyes
-"
 ;
 then
 if
@@ -6088,14 +6201,14 @@ xyes
 "
 ;
 then
-JE_CFLAGS_APPEND
+JE_CFLAGS_ADD
 (
 [
 -
 O3
 ]
 )
-JE_CFLAGS_APPEND
+JE_CFLAGS_ADD
 (
 [
 -
@@ -6116,7 +6229,7 @@ xyes
 "
 ;
 then
-JE_CFLAGS_APPEND
+JE_CFLAGS_ADD
 (
 [
 -
@@ -6124,14 +6237,13 @@ O2
 ]
 )
 else
-JE_CFLAGS_APPEND
+JE_CFLAGS_ADD
 (
 [
 -
 O
 ]
 )
-fi
 fi
 fi
 dnl
@@ -6528,12 +6640,11 @@ unwind
 unw_backtrace
 ]
 [
-LIBS
-=
-"
+JE_APPEND_VS
+(
 LIBS
 LUNWIND
-"
+)
 ]
 [
 enable_prof_libunwind
@@ -6544,12 +6655,11 @@ enable_prof_libunwind
 ]
 )
 else
-LIBS
-=
-"
+JE_APPEND_VS
+(
 LIBS
 LUNWIND
-"
+)
 fi
 if
 test
@@ -6700,13 +6810,12 @@ gcc
 _Unwind_Backtrace
 ]
 [
-LIBS
-=
-"
+JE_APPEND_VS
+(
 LIBS
 -
 lgcc
-"
+)
 ]
 [
 enable_prof_libgcc
@@ -6848,7 +6957,7 @@ xyes
 "
 ;
 then
-JE_CFLAGS_APPEND
+JE_CFLAGS_ADD
 (
 [
 -
@@ -6946,26 +7055,11 @@ log
 )
 function
 .
-if
-test
-"
-x
-LM
-"
-!
-=
-"
-x
-"
-;
-then
-LIBS
-=
-"
+JE_APPEND_VS
+(
 LIBS
 LM
-"
-fi
+)
 AC_DEFINE
 (
 [
@@ -10038,13 +10132,12 @@ pthread
 pthread_create
 ]
 [
-LIBS
-=
-"
+JE_APPEND_VS
+(
 LIBS
 -
 lpthread
-"
+)
 ]
 [
 AC_SEARCH_LIBS
@@ -10129,13 +10222,12 @@ JEMALLOC_HAVE_PTHREAD_ATFORK
 )
 fi
 fi
-CPPFLAGS
-=
-"
+JE_APPEND_VS
+(
 CPPFLAGS
 -
 D_REENTRANT
-"
+)
 dnl
 Check
 whether
@@ -10213,16 +10305,12 @@ lrt
 "
 ;
 then
-SAVED_CFLAGS
-=
-"
-{
-CFLAGS
-}
-"
+JE_CFLAGS_SAVE
+(
+)
 unset
 ac_cv_search_clock_gettime
-JE_CFLAGS_APPEND
+JE_CFLAGS_ADD
 (
 [
 -
@@ -10238,13 +10326,9 @@ clock_gettime
 rt
 ]
 )
-CFLAGS
-=
-"
-{
-SAVED_CFLAGS
-}
-"
+JE_CFLAGS_RESTORE
+(
+)
 fi
 fi
 dnl
@@ -10579,14 +10663,10 @@ warning
 prevents
 use
 .
-SAVED_CFLAGS
-=
-"
-{
-CFLAGS
-}
-"
-JE_CFLAGS_APPEND
+JE_CFLAGS_SAVE
+(
+)
+JE_CFLAGS_ADD
 (
 [
 -
@@ -10635,13 +10715,9 @@ hello
 je_cv_syscall
 ]
 )
-CFLAGS
-=
-"
-{
-SAVED_CFLAGS
-}
-"
+JE_CFLAGS_RESTORE
+(
+)
 if
 test
 "
@@ -11168,13 +11244,12 @@ dl
 dlsym
 ]
 [
-LIBS
-=
-"
+JE_APPEND_VS
+(
 LIBS
 -
 ldl
-"
+)
 ]
 [
 AC_MSG_ERROR
@@ -12472,13 +12547,141 @@ then
 AC_DEFINE
 (
 [
-JEMALLOC_THP
+JEMALLOC_HAVE_MADVISE_HUGE
 ]
 [
 ]
 )
 fi
 fi
+dnl
+Enable
+transparent
+huge
+page
+support
+by
+default
+.
+AC_ARG_ENABLE
+(
+[
+thp
+]
+[
+AS_HELP_STRING
+(
+[
+-
+-
+disable
+-
+thp
+]
+[
+Disable
+transparent
+huge
+page
+supprot
+]
+)
+]
+[
+if
+test
+"
+x
+enable_thp
+"
+=
+"
+xno
+"
+-
+o
+"
+x
+{
+je_cv_thp
+}
+"
+!
+=
+"
+xyes
+"
+;
+then
+enable_thp
+=
+"
+0
+"
+else
+enable_thp
+=
+"
+1
+"
+fi
+]
+[
+if
+test
+"
+x
+{
+je_cv_thp
+}
+"
+=
+"
+xyes
+"
+;
+then
+enable_thp
+=
+"
+1
+"
+else
+enable_thp
+=
+"
+0
+"
+fi
+]
+)
+if
+test
+"
+x
+enable_thp
+"
+=
+"
+x1
+"
+;
+then
+AC_DEFINE
+(
+[
+JEMALLOC_THP
+]
+[
+]
+)
+fi
+AC_SUBST
+(
+[
+enable_thp
+]
+)
 dnl
 =
 =
@@ -15528,10 +15731,20 @@ CC
 AC_MSG_RESULT
 (
 [
-CFLAGS
+CONFIGURE_CFLAGS
 :
 {
-CFLAGS
+CONFIGURE_CFLAGS
+}
+]
+)
+AC_MSG_RESULT
+(
+[
+SPECIFIED_CFLAGS
+:
+{
+SPECIFIED_CFLAGS
 }
 ]
 )
@@ -15887,6 +16100,16 @@ tcache
 :
 {
 enable_tcache
+}
+]
+)
+AC_MSG_RESULT
+(
+[
+thp
+:
+{
+enable_thp
 }
 ]
 )
