--- a/memory/jemalloc/src/include/jemalloc/internal/jemalloc_internal.h.in
+++ b/memory/jemalloc/src/include/jemalloc/internal/jemalloc_internal.h.in
@@ -293,6 +293,21 @@ endif
 static
 const
 bool
+config_thp
+=
+#
+ifdef
+JEMALLOC_THP
+true
+#
+else
+false
+#
+endif
+;
+static
+const
+bool
 config_tls
 =
 #
