--- a/memory/jemalloc/src/include/jemalloc/internal/jemalloc_internal_defs.h.in
+++ b/memory/jemalloc/src/include/jemalloc/internal/jemalloc_internal_defs.h.in
@@ -1363,6 +1363,36 @@ JEMALLOC_HAVE_MADVISE
 /
 *
 *
+Defined
+if
+transparent
+huge
+pages
+are
+supported
+via
+the
+MADV_
+[
+NO
+]
+HUGEPAGE
+*
+arguments
+to
+madvise
+(
+2
+)
+.
+*
+/
+#
+undef
+JEMALLOC_HAVE_MADVISE_HUGE
+/
+*
+*
 Methods
 for
 purging
@@ -1443,28 +1473,14 @@ undef
 JEMALLOC_PURGE_MADVISE_DONTNEED
 /
 *
-*
 Defined
 if
 transparent
 huge
-pages
-are
-supported
-via
-the
-MADV_
-[
-NO
-]
-HUGEPAGE
-*
-arguments
-to
-madvise
-(
-2
-)
+page
+support
+is
+enabled
 .
 *
 /
