--- a/memory/jemalloc/src/.appveyor.yml
+++ b/memory/jemalloc/src/.appveyor.yml
@@ -43,6 +43,68 @@ MINGW32
 CPU
 :
 i686
+-
+MSYSTEM
+:
+MINGW64
+CPU
+:
+x86_64
+MSVC
+:
+amd64
+CONFIG_FLAGS
+:
+-
+-
+enable
+-
+debug
+-
+MSYSTEM
+:
+MINGW32
+CPU
+:
+i686
+MSVC
+:
+x86
+CONFIG_FLAGS
+:
+-
+-
+enable
+-
+debug
+-
+MSYSTEM
+:
+MINGW64
+CPU
+:
+x86_64
+CONFIG_FLAGS
+:
+-
+-
+enable
+-
+debug
+-
+MSYSTEM
+:
+MINGW32
+CPU
+:
+i686
+CONFIG_FLAGS
+:
+-
+-
+enable
+-
+debug
 install
 :
 -
@@ -156,6 +218,7 @@ c
 .
 /
 configure
+CONFIG_FLAGS
 "
 -
 mingw32
