Backed out changeset 24bea8bde57d (bug 1343432) for build bustage
UltraBlame original commit: 49e60602adda18b97768cd45c11f22a9bdadde24

--- a/memory/jemalloc/src/.travis.yml
+++ b/memory/jemalloc/src/.travis.yml
@@ -1,6 +1,6 @@
 language
 :
-generic
+c
 matrix
 :
 include
@@ -9,72 +9,23 @@ include
 os
 :
 linux
-env
+compiler
 :
-CC
-=
 gcc
-COMPILER_FLAGS
-=
-"
-"
-CONFIGURE_FLAGS
-=
-"
-"
--
-os
-:
-osx
-env
-:
-CC
-=
-gcc
-COMPILER_FLAGS
-=
-"
-"
-CONFIGURE_FLAGS
-=
-"
-"
 -
 os
 :
 linux
-env
+compiler
 :
-CC
-=
-clang
-COMPILER_FLAGS
-=
-"
-"
-CONFIGURE_FLAGS
-=
-"
-"
--
-os
-:
-linux
-env
-:
-CC
-=
 gcc
-COMPILER_FLAGS
+env
+:
+-
+EXTRA_FLAGS
 =
-"
 -
 m32
-"
-CONFIGURE_FLAGS
-=
-"
-"
 addons
 :
 apt
@@ -88,608 +39,24 @@ multilib
 -
 os
 :
-linux
-env
+osx
+compiler
 :
-CC
-=
-gcc
-COMPILER_FLAGS
-=
-"
-"
-CONFIGURE_FLAGS
-=
-"
--
--
-enable
--
-debug
-"
--
-os
-:
-linux
-env
-:
-CC
-=
-gcc
-COMPILER_FLAGS
-=
-"
-"
-CONFIGURE_FLAGS
-=
-"
--
--
-enable
--
-prof
-"
--
-os
-:
-linux
-env
-:
-CC
-=
-gcc
-COMPILER_FLAGS
-=
-"
-"
-CONFIGURE_FLAGS
-=
-"
--
--
-disable
--
-stats
-"
--
-os
-:
-linux
-env
-:
-CC
-=
-gcc
-COMPILER_FLAGS
-=
-"
-"
-CONFIGURE_FLAGS
-=
-"
--
--
-disable
--
-tcache
-"
+clang
 -
 os
 :
 osx
-env
+compiler
 :
-CC
-=
 clang
-COMPILER_FLAGS
-=
-"
-"
-CONFIGURE_FLAGS
-=
-"
-"
--
-os
-:
-osx
 env
 :
-CC
+-
+EXTRA_FLAGS
 =
-gcc
-COMPILER_FLAGS
-=
-"
 -
 m32
-"
-CONFIGURE_FLAGS
-=
-"
-"
--
-os
-:
-osx
-env
-:
-CC
-=
-gcc
-COMPILER_FLAGS
-=
-"
-"
-CONFIGURE_FLAGS
-=
-"
--
--
-enable
--
-debug
-"
--
-os
-:
-osx
-env
-:
-CC
-=
-gcc
-COMPILER_FLAGS
-=
-"
-"
-CONFIGURE_FLAGS
-=
-"
--
--
-disable
--
-stats
-"
--
-os
-:
-osx
-env
-:
-CC
-=
-gcc
-COMPILER_FLAGS
-=
-"
-"
-CONFIGURE_FLAGS
-=
-"
--
--
-disable
--
-tcache
-"
--
-os
-:
-linux
-env
-:
-CC
-=
-clang
-COMPILER_FLAGS
-=
-"
--
-m32
-"
-CONFIGURE_FLAGS
-=
-"
-"
-addons
-:
-apt
-:
-packages
-:
--
-gcc
--
-multilib
--
-os
-:
-linux
-env
-:
-CC
-=
-clang
-COMPILER_FLAGS
-=
-"
-"
-CONFIGURE_FLAGS
-=
-"
--
--
-enable
--
-debug
-"
--
-os
-:
-linux
-env
-:
-CC
-=
-clang
-COMPILER_FLAGS
-=
-"
-"
-CONFIGURE_FLAGS
-=
-"
--
--
-enable
--
-prof
-"
--
-os
-:
-linux
-env
-:
-CC
-=
-clang
-COMPILER_FLAGS
-=
-"
-"
-CONFIGURE_FLAGS
-=
-"
--
--
-disable
--
-stats
-"
--
-os
-:
-linux
-env
-:
-CC
-=
-clang
-COMPILER_FLAGS
-=
-"
-"
-CONFIGURE_FLAGS
-=
-"
--
--
-disable
--
-tcache
-"
--
-os
-:
-linux
-env
-:
-CC
-=
-gcc
-COMPILER_FLAGS
-=
-"
--
-m32
-"
-CONFIGURE_FLAGS
-=
-"
--
--
-enable
--
-debug
-"
-addons
-:
-apt
-:
-packages
-:
--
-gcc
--
-multilib
--
-os
-:
-linux
-env
-:
-CC
-=
-gcc
-COMPILER_FLAGS
-=
-"
--
-m32
-"
-CONFIGURE_FLAGS
-=
-"
--
--
-enable
--
-prof
-"
-addons
-:
-apt
-:
-packages
-:
--
-gcc
--
-multilib
--
-os
-:
-linux
-env
-:
-CC
-=
-gcc
-COMPILER_FLAGS
-=
-"
--
-m32
-"
-CONFIGURE_FLAGS
-=
-"
--
--
-disable
--
-stats
-"
-addons
-:
-apt
-:
-packages
-:
--
-gcc
--
-multilib
--
-os
-:
-linux
-env
-:
-CC
-=
-gcc
-COMPILER_FLAGS
-=
-"
--
-m32
-"
-CONFIGURE_FLAGS
-=
-"
--
--
-disable
--
-tcache
-"
-addons
-:
-apt
-:
-packages
-:
--
-gcc
--
-multilib
--
-os
-:
-linux
-env
-:
-CC
-=
-gcc
-COMPILER_FLAGS
-=
-"
-"
-CONFIGURE_FLAGS
-=
-"
--
--
-enable
--
-debug
--
--
-enable
--
-prof
-"
--
-os
-:
-linux
-env
-:
-CC
-=
-gcc
-COMPILER_FLAGS
-=
-"
-"
-CONFIGURE_FLAGS
-=
-"
--
--
-enable
--
-debug
--
--
-disable
--
-stats
-"
--
-os
-:
-linux
-env
-:
-CC
-=
-gcc
-COMPILER_FLAGS
-=
-"
-"
-CONFIGURE_FLAGS
-=
-"
--
--
-enable
--
-debug
--
--
-disable
--
-tcache
-"
--
-os
-:
-linux
-env
-:
-CC
-=
-gcc
-COMPILER_FLAGS
-=
-"
-"
-CONFIGURE_FLAGS
-=
-"
--
--
-enable
--
-prof
--
--
-disable
--
-stats
-"
--
-os
-:
-linux
-env
-:
-CC
-=
-gcc
-COMPILER_FLAGS
-=
-"
-"
-CONFIGURE_FLAGS
-=
-"
--
--
-enable
--
-prof
--
--
-disable
--
-tcache
-"
--
-os
-:
-linux
-env
-:
-CC
-=
-gcc
-COMPILER_FLAGS
-=
-"
-"
-CONFIGURE_FLAGS
-=
-"
--
--
-disable
--
-stats
--
--
-disable
--
-tcache
-"
 before_script
 :
 -
@@ -699,17 +66,16 @@ autoconf
 /
 configure
 {
-COMPILER_FLAGS
+EXTRA_FLAGS
 :
 +
 CC
 =
 "
 CC
-COMPILER_FLAGS
+EXTRA_FLAGS
 "
 }
-CONFIGURE_FLAGS
 -
 make
 -
