--- a/memory/jemalloc/src/configure.ac
+++ b/memory/jemalloc/src/configure.ac
@@ -109,202 +109,14 @@ macro
 definitions
 .
 dnl
-JE_CONCAT_VVV
-(
-r
-a
-b
-)
-dnl
-dnl
-Set
-r
-to
-the
-concatenation
-of
-a
-and
-b
-with
-a
-space
-separating
-them
-iff
-dnl
-both
-a
-and
-b
-are
-non
--
-emty
-.
-AC_DEFUN
-(
-[
-JE_CONCAT_VVV
-]
-if
-test
-"
-x
-[
-]
-{
-2
-}
-"
-=
-"
-x
-"
--
-o
-"
-x
-[
-]
-{
-3
-}
-"
-=
-"
-x
-"
-;
-then
-1
-=
-"
-[
-]
-{
-2
-}
-[
-]
-{
-3
-}
-"
-else
-1
-=
-"
-[
-]
-{
-2
-}
-[
-]
-{
-3
-}
-"
-fi
-)
-dnl
-JE_APPEND_VS
-(
-a
-b
-)
-dnl
-dnl
-Set
-a
-to
-the
-concatenation
-of
-a
-and
-b
-with
-a
-space
-separating
-them
-iff
-dnl
-both
-a
-and
-b
-are
-non
--
-empty
-.
-AC_DEFUN
-(
-[
-JE_APPEND_VS
-]
-T_APPEND_V
-=
-2
-JE_CONCAT_VVV
-(
-1
-1
-T_APPEND_V
-)
-)
-CONFIGURE_CFLAGS
-=
-SPECIFIED_CFLAGS
-=
-"
-{
-CFLAGS
-}
-"
-dnl
-JE_CFLAGS_ADD
+JE_CFLAGS_APPEND
 (
 cflag
 )
-dnl
-dnl
-CFLAGS
-is
-the
-concatenation
-of
-CONFIGURE_CFLAGS
-and
-SPECIFIED_CFLAGS
-dnl
-(
-ignoring
-EXTRA_CFLAGS
-which
-does
-not
-impact
-configure
-tests
-.
-This
-macro
-dnl
-appends
-to
-CONFIGURE_CFLAGS
-and
-regenerates
-CFLAGS
-.
 AC_DEFUN
 (
 [
-JE_CFLAGS_ADD
+JE_CFLAGS_APPEND
 ]
 [
 AC_MSG_CHECKING
@@ -316,24 +128,42 @@ supports
 1
 ]
 )
-T_CONFIGURE_CFLAGS
+TCFLAGS
 =
 "
 {
-CONFIGURE_CFLAGS
+CFLAGS
 }
 "
-JE_APPEND_VS
-(
-CONFIGURE_CFLAGS
-1
-)
-JE_CONCAT_VVV
-(
+if
+test
+"
+x
+{
 CFLAGS
-CONFIGURE_CFLAGS
-SPECIFIED_CFLAGS
-)
+}
+"
+=
+"
+x
+"
+;
+then
+CFLAGS
+=
+"
+1
+"
+else
+CFLAGS
+=
+"
+{
+CFLAGS
+}
+1
+"
+fi
 AC_COMPILE_IFELSE
 (
 [
@@ -353,7 +183,7 @@ return
 )
 ]
 [
-je_cv_cflags_added
+je_cv_cflags_appended
 =
 1
 ]
@@ -364,7 +194,7 @@ yes
 ]
 )
 [
-je_cv_cflags_added
+je_cv_cflags_appended
 =
 ]
 AC_MSG_RESULT
@@ -374,74 +204,16 @@ no
 ]
 )
 [
-CONFIGURE_CFLAGS
+CFLAGS
 =
 "
 {
-T_CONFIGURE_CFLAGS
+TCFLAGS
 }
 "
 ]
 )
-JE_CONCAT_VVV
-(
-CFLAGS
-CONFIGURE_CFLAGS
-SPECIFIED_CFLAGS
-)
 ]
-)
-dnl
-JE_CFLAGS_SAVE
-(
-)
-dnl
-JE_CFLAGS_RESTORE
-(
-)
-dnl
-dnl
-Save
-/
-restore
-CFLAGS
-.
-Nesting
-is
-not
-supported
-.
-AC_DEFUN
-(
-[
-JE_CFLAGS_SAVE
-]
-SAVED_CONFIGURE_CFLAGS
-=
-"
-{
-CONFIGURE_CFLAGS
-}
-"
-)
-AC_DEFUN
-(
-[
-JE_CFLAGS_RESTORE
-]
-CONFIGURE_CFLAGS
-=
-"
-{
-SAVED_CONFIGURE_CFLAGS
-}
-"
-JE_CONCAT_VVV
-(
-CFLAGS
-CONFIGURE_CFLAGS
-SPECIFIED_CFLAGS
-)
 )
 dnl
 JE_COMPILABLE
@@ -1320,6 +1092,23 @@ if
 test
 "
 x
+CFLAGS
+"
+=
+"
+x
+"
+;
+then
+no_CFLAGS
+=
+"
+yes
+"
+if
+test
+"
+x
 GCC
 "
 =
@@ -1328,7 +1117,7 @@ xyes
 "
 ;
 then
-JE_CFLAGS_ADD
+JE_CFLAGS_APPEND
 (
 [
 -
@@ -1341,7 +1130,7 @@ if
 test
 "
 x
-je_cv_cflags_added
+je_cv_cflags_appended
 "
 =
 "
@@ -1360,7 +1149,7 @@ JEMALLOC_HAS_RESTRICT
 ]
 )
 else
-JE_CFLAGS_ADD
+JE_CFLAGS_APPEND
 (
 [
 -
@@ -1373,7 +1162,7 @@ if
 test
 "
 x
-je_cv_cflags_added
+je_cv_cflags_appended
 "
 =
 "
@@ -1393,14 +1182,14 @@ JEMALLOC_HAS_RESTRICT
 )
 fi
 fi
-JE_CFLAGS_ADD
+JE_CFLAGS_APPEND
 (
 [
 -
 Wall
 ]
 )
-JE_CFLAGS_ADD
+JE_CFLAGS_APPEND
 (
 [
 -
@@ -1413,7 +1202,7 @@ after
 statement
 ]
 )
-JE_CFLAGS_ADD
+JE_CFLAGS_APPEND
 (
 [
 -
@@ -1426,7 +1215,7 @@ to
 32
 ]
 )
-JE_CFLAGS_ADD
+JE_CFLAGS_APPEND
 (
 [
 -
@@ -1435,14 +1224,14 @@ Wsign
 compare
 ]
 )
-JE_CFLAGS_ADD
+JE_CFLAGS_APPEND
 (
 [
 -
 pipe
 ]
 )
-JE_CFLAGS_ADD
+JE_CFLAGS_APPEND
 (
 [
 -
@@ -1468,36 +1257,37 @@ CC
 -
 nologo
 "
-JE_CFLAGS_ADD
+JE_CFLAGS_APPEND
 (
 [
 -
 Zi
 ]
 )
-JE_CFLAGS_ADD
+JE_CFLAGS_APPEND
 (
 [
 -
 MT
 ]
 )
-JE_CFLAGS_ADD
+JE_CFLAGS_APPEND
 (
 [
 -
 W3
 ]
 )
-JE_CFLAGS_ADD
+JE_CFLAGS_APPEND
 (
 [
 -
 FS
 ]
 )
-JE_APPEND_VS
-(
+CPPFLAGS
+=
+"
 CPPFLAGS
 -
 I
@@ -1508,7 +1298,7 @@ srcdir
 include
 /
 msvc_compat
-)
+"
 fi
 if
 test
@@ -1544,14 +1334,14 @@ xyes
 "
 ;
 then
-JE_CFLAGS_ADD
+JE_CFLAGS_APPEND
 (
 [
 -
 hipa2
 ]
 )
-JE_CFLAGS_ADD
+JE_CFLAGS_APPEND
 (
 [
 -
@@ -1577,7 +1367,7 @@ ignore
 unreachable
 code
 warning
-JE_CFLAGS_ADD
+JE_CFLAGS_APPEND
 (
 [
 -
@@ -1598,7 +1388,7 @@ free
 "
 etc
 warning
-JE_CFLAGS_ADD
+JE_CFLAGS_APPEND
 (
 [
 -
@@ -1609,18 +1399,7 @@ hnomessage
 )
 fi
 fi
-AC_SUBST
-(
-[
-CONFIGURE_CFLAGS
-]
-)
-AC_SUBST
-(
-[
-SPECIFIED_CFLAGS
-]
-)
+fi
 AC_SUBST
 (
 [
@@ -1690,8 +1469,9 @@ xno
 "
 ;
 then
-JE_APPEND_VS
-(
+CPPFLAGS
+=
+"
 CPPFLAGS
 -
 I
@@ -1704,7 +1484,7 @@ include
 msvc_compat
 /
 C99
-)
+"
 fi
 if
 test
@@ -2518,6 +2298,11 @@ make
 happen
 otherwise
 .
+CFLAGS
+=
+"
+CFLAGS
+"
 default_munmap
 =
 "
@@ -2712,12 +2497,13 @@ exposed
 by
 _GNU_SOURCE
 .
-JE_APPEND_VS
-(
+CPPFLAGS
+=
+"
 CPPFLAGS
 -
 D_GNU_SOURCE
-)
+"
 abi
 =
 "
@@ -2792,12 +2578,13 @@ exposed
 by
 _GNU_SOURCE
 .
-JE_APPEND_VS
-(
+CPPFLAGS
+=
+"
 CPPFLAGS
 -
 D_GNU_SOURCE
-)
+"
 abi
 =
 "
@@ -2934,14 +2721,16 @@ sigwait
 (
 )
 .
-JE_APPEND_VS
-(
+CPPFLAGS
+=
+"
 CPPFLAGS
 -
 D_POSIX_PTHREAD_SEMANTICS
-)
-JE_APPEND_VS
-(
+"
+LIBS
+=
+"
 LIBS
 -
 lposix4
@@ -2949,7 +2738,7 @@ lposix4
 lsocket
 -
 lnsl
-)
+"
 ;
 ;
 *
@@ -3512,7 +3301,7 @@ xelf
 "
 ;
 then
-JE_CFLAGS_ADD
+JE_CFLAGS_APPEND
 (
 [
 -
@@ -3539,17 +3328,21 @@ lacks
 support
 )
 .
-JE_CFLAGS_SAVE
-(
-)
-JE_CFLAGS_ADD
+SAVED_CFLAGS
+=
+"
+{
+CFLAGS
+}
+"
+JE_CFLAGS_APPEND
 (
 [
 -
 Werror
 ]
 )
-JE_CFLAGS_ADD
+JE_CFLAGS_APPEND
 (
 [
 -
@@ -3593,9 +3386,13 @@ foo
 je_cv_tls_model
 ]
 )
-JE_CFLAGS_RESTORE
-(
-)
+CFLAGS
+=
+"
+{
+SAVED_CFLAGS
+}
+"
 if
 test
 "
@@ -3648,17 +3445,21 @@ alloc_size
 attribute
 support
 .
-JE_CFLAGS_SAVE
-(
-)
-JE_CFLAGS_ADD
+SAVED_CFLAGS
+=
+"
+{
+CFLAGS
+}
+"
+JE_CFLAGS_APPEND
 (
 [
 -
 Werror
 ]
 )
-JE_CFLAGS_ADD
+JE_CFLAGS_APPEND
 (
 [
 -
@@ -3703,9 +3504,13 @@ alloc_size
 je_cv_alloc_size
 ]
 )
-JE_CFLAGS_RESTORE
-(
-)
+CFLAGS
+=
+"
+{
+SAVED_CFLAGS
+}
+"
 if
 test
 "
@@ -3742,17 +3547,21 @@ gnu_printf
 attribute
 support
 .
-JE_CFLAGS_SAVE
-(
-)
-JE_CFLAGS_ADD
+SAVED_CFLAGS
+=
+"
+{
+CFLAGS
+}
+"
+JE_CFLAGS_APPEND
 (
 [
 -
 Werror
 ]
 )
-JE_CFLAGS_ADD
+JE_CFLAGS_APPEND
 (
 [
 -
@@ -3810,9 +3619,13 @@ gnu_printf
 je_cv_format_gnu_printf
 ]
 )
-JE_CFLAGS_RESTORE
-(
-)
+CFLAGS
+=
+"
+{
+SAVED_CFLAGS
+}
+"
 if
 test
 "
@@ -3849,17 +3662,21 @@ printf
 attribute
 support
 .
-JE_CFLAGS_SAVE
-(
-)
-JE_CFLAGS_ADD
+SAVED_CFLAGS
+=
+"
+{
+CFLAGS
+}
+"
+JE_CFLAGS_APPEND
 (
 [
 -
 Werror
 ]
 )
-JE_CFLAGS_ADD
+JE_CFLAGS_APPEND
 (
 [
 -
@@ -3917,9 +3734,13 @@ printf
 je_cv_format_printf
 ]
 )
-JE_CFLAGS_RESTORE
-(
-)
+CFLAGS
+=
+"
+{
+SAVED_CFLAGS
+}
+"
 if
 test
 "
@@ -4339,7 +4160,7 @@ xyes
 "
 ;
 then
-JE_CFLAGS_ADD
+JE_CFLAGS_APPEND
 (
 [
 -
@@ -4347,7 +4168,7 @@ O0
 ]
 )
 fi
-JE_CFLAGS_ADD
+JE_CFLAGS_APPEND
 (
 [
 -
@@ -6187,6 +6008,72 @@ enable_debug
 "
 x0
 "
+-
+a
+"
+x
+no_CFLAGS
+"
+=
+"
+xyes
+"
+;
+then
+dnl
+Make
+sure
+that
+an
+optimization
+flag
+was
+not
+specified
+in
+EXTRA_CFLAGS
+.
+optimize
+=
+"
+no
+"
+echo
+"
+CFLAGS
+EXTRA_CFLAGS
+"
+|
+grep
+'
+\
+-
+O
+'
+>
+/
+dev
+/
+null
+|
+|
+optimize
+=
+"
+yes
+"
+if
+test
+"
+x
+{
+optimize
+}
+"
+=
+"
+xyes
+"
 ;
 then
 if
@@ -6201,14 +6088,14 @@ xyes
 "
 ;
 then
-JE_CFLAGS_ADD
+JE_CFLAGS_APPEND
 (
 [
 -
 O3
 ]
 )
-JE_CFLAGS_ADD
+JE_CFLAGS_APPEND
 (
 [
 -
@@ -6229,7 +6116,7 @@ xyes
 "
 ;
 then
-JE_CFLAGS_ADD
+JE_CFLAGS_APPEND
 (
 [
 -
@@ -6237,13 +6124,14 @@ O2
 ]
 )
 else
-JE_CFLAGS_ADD
+JE_CFLAGS_APPEND
 (
 [
 -
 O
 ]
 )
+fi
 fi
 fi
 dnl
@@ -6640,11 +6528,12 @@ unwind
 unw_backtrace
 ]
 [
-JE_APPEND_VS
-(
+LIBS
+=
+"
 LIBS
 LUNWIND
-)
+"
 ]
 [
 enable_prof_libunwind
@@ -6655,11 +6544,12 @@ enable_prof_libunwind
 ]
 )
 else
-JE_APPEND_VS
-(
+LIBS
+=
+"
 LIBS
 LUNWIND
-)
+"
 fi
 if
 test
@@ -6810,12 +6700,13 @@ gcc
 _Unwind_Backtrace
 ]
 [
-JE_APPEND_VS
-(
+LIBS
+=
+"
 LIBS
 -
 lgcc
-)
+"
 ]
 [
 enable_prof_libgcc
@@ -6957,7 +6848,7 @@ xyes
 "
 ;
 then
-JE_CFLAGS_ADD
+JE_CFLAGS_APPEND
 (
 [
 -
@@ -7055,11 +6946,26 @@ log
 )
 function
 .
-JE_APPEND_VS
-(
+if
+test
+"
+x
+LM
+"
+!
+=
+"
+x
+"
+;
+then
+LIBS
+=
+"
 LIBS
 LM
-)
+"
+fi
 AC_DEFINE
 (
 [
@@ -10132,12 +10038,13 @@ pthread
 pthread_create
 ]
 [
-JE_APPEND_VS
-(
+LIBS
+=
+"
 LIBS
 -
 lpthread
-)
+"
 ]
 [
 AC_SEARCH_LIBS
@@ -10222,12 +10129,13 @@ JEMALLOC_HAVE_PTHREAD_ATFORK
 )
 fi
 fi
-JE_APPEND_VS
-(
+CPPFLAGS
+=
+"
 CPPFLAGS
 -
 D_REENTRANT
-)
+"
 dnl
 Check
 whether
@@ -10305,12 +10213,16 @@ lrt
 "
 ;
 then
-JE_CFLAGS_SAVE
-(
-)
+SAVED_CFLAGS
+=
+"
+{
+CFLAGS
+}
+"
 unset
 ac_cv_search_clock_gettime
-JE_CFLAGS_ADD
+JE_CFLAGS_APPEND
 (
 [
 -
@@ -10326,9 +10238,13 @@ clock_gettime
 rt
 ]
 )
-JE_CFLAGS_RESTORE
-(
-)
+CFLAGS
+=
+"
+{
+SAVED_CFLAGS
+}
+"
 fi
 fi
 dnl
@@ -10663,10 +10579,14 @@ warning
 prevents
 use
 .
-JE_CFLAGS_SAVE
-(
-)
-JE_CFLAGS_ADD
+SAVED_CFLAGS
+=
+"
+{
+CFLAGS
+}
+"
+JE_CFLAGS_APPEND
 (
 [
 -
@@ -10715,9 +10635,13 @@ hello
 je_cv_syscall
 ]
 )
-JE_CFLAGS_RESTORE
-(
-)
+CFLAGS
+=
+"
+{
+SAVED_CFLAGS
+}
+"
 if
 test
 "
@@ -11244,12 +11168,13 @@ dl
 dlsym
 ]
 [
-JE_APPEND_VS
-(
+LIBS
+=
+"
 LIBS
 -
 ldl
-)
+"
 ]
 [
 AC_MSG_ERROR
@@ -12547,141 +12472,13 @@ then
 AC_DEFINE
 (
 [
-JEMALLOC_HAVE_MADVISE_HUGE
-]
-[
-]
-)
-fi
-fi
-dnl
-Enable
-transparent
-huge
-page
-support
-by
-default
-.
-AC_ARG_ENABLE
-(
-[
-thp
-]
-[
-AS_HELP_STRING
-(
-[
--
--
-disable
--
-thp
-]
-[
-Disable
-transparent
-huge
-page
-supprot
-]
-)
-]
-[
-if
-test
-"
-x
-enable_thp
-"
-=
-"
-xno
-"
--
-o
-"
-x
-{
-je_cv_thp
-}
-"
-!
-=
-"
-xyes
-"
-;
-then
-enable_thp
-=
-"
-0
-"
-else
-enable_thp
-=
-"
-1
-"
-fi
-]
-[
-if
-test
-"
-x
-{
-je_cv_thp
-}
-"
-=
-"
-xyes
-"
-;
-then
-enable_thp
-=
-"
-1
-"
-else
-enable_thp
-=
-"
-0
-"
-fi
-]
-)
-if
-test
-"
-x
-enable_thp
-"
-=
-"
-x1
-"
-;
-then
-AC_DEFINE
-(
-[
 JEMALLOC_THP
 ]
 [
 ]
 )
 fi
-AC_SUBST
-(
-[
-enable_thp
-]
-)
+fi
 dnl
 =
 =
@@ -15731,20 +15528,10 @@ CC
 AC_MSG_RESULT
 (
 [
-CONFIGURE_CFLAGS
+CFLAGS
 :
 {
-CONFIGURE_CFLAGS
-}
-]
-)
-AC_MSG_RESULT
-(
-[
-SPECIFIED_CFLAGS
-:
-{
-SPECIFIED_CFLAGS
+CFLAGS
 }
 ]
 )
@@ -16100,16 +15887,6 @@ tcache
 :
 {
 enable_tcache
-}
-]
-)
-AC_MSG_RESULT
-(
-[
-thp
-:
-{
-enable_thp
 }
 ]
 )
