--- a/memory/jemalloc/src/Makefile.in
+++ b/memory/jemalloc/src/Makefile.in
@@ -128,14 +128,6 @@ I
 objroot
 )
 include
-CONFIGURE_CFLAGS
-:
-=
-CONFIGURE_CFLAGS
-SPECIFIED_CFLAGS
-:
-=
-SPECIFIED_CFLAGS
 EXTRA_CFLAGS
 :
 =
@@ -143,17 +135,9 @@ EXTRA_CFLAGS
 CFLAGS
 :
 =
-(
-strip
-(
-CONFIGURE_CFLAGS
-)
-(
-SPECIFIED_CFLAGS
-)
+CFLAGS
 (
 EXTRA_CFLAGS
-)
 )
 LDFLAGS
 :
@@ -1178,17 +1162,6 @@ test
 /
 unit
 /
-extent_quantize
-.
-c
-\
-(
-srcroot
-)
-test
-/
-unit
-/
 fork
 .
 c
@@ -1509,17 +1482,6 @@ test
 unit
 /
 stats
-.
-c
-\
-(
-srcroot
-)
-test
-/
-unit
-/
-stats_print
 .
 c
 \
