Bug 1190687 - [webext] webNavigation.onCreatedNavigationTarget on new windows/tabs from context menu and user clicks on links. r=kmag
MozReview-Commit-ID: KYVKkVUSOzR

UltraBlame original commit: 3884829f39b0040e5f02d913d2996b0ab00fac7a

--- a/browser/components/extensions/test/browser/browser-common.ini
+++ b/browser/components/extensions/test/browser/browser-common.ini
@@ -64,6 +64,15 @@ sjs
 file_serviceWorker
 .
 html
+webNav_createdTarget
+.
+html
+webNav_createdTargetSource
+.
+html
+webNav_createdTargetSource_subframe
+.
+html
 serviceWorker
 .
 js
@@ -578,6 +587,11 @@ js
 ]
 [
 browser_ext_webNavigation_getFrames
+.
+js
+]
+[
+browser_ext_webNavigation_onCreatedNavigationTarget
 .
 js
 ]
