Bug 1190687 - [webext] webNavigation.onCreatedNavigationTarget on new windows/tabs from window.open. r=billm
MozReview-Commit-ID: KFtRP1eSI05

UltraBlame original commit: 1733ced10f061c456c86de9a69fbd38255b1701c

--- a/browser/components/extensions/test/browser/browser-common.ini
+++ b/browser/components/extensions/test/browser/browser-common.ini
@@ -596,6 +596,11 @@ browser_ext_webNavigation_onCreatedNavigationTarget
 js
 ]
 [
+browser_ext_webNavigation_onCreatedNavigationTarget_window_open
+.
+js
+]
+[
 browser_ext_webNavigation_urlbar_transitions
 .
 js
