servo: Merge #15798 - Switch to our own websocket fork (from nox:websocket); r=Ms2ger
Source-Repo: https://github.com/servo/servo
Source-Revision: dabbdaf971c14e7b79704bc6d473ef351a3a9192

UltraBlame original commit: 817f09e9fae73131a7c33dbd844005a15a523879

--- a/servo/components/net_traits/Cargo.toml
+++ b/servo/components/net_traits/Cargo.toml
@@ -203,6 +203,15 @@ servo
 "
 ]
 }
+servo
+-
+websocket
+=
+"
+0
+.
+18
+"
 url
 =
 {
@@ -268,10 +277,3 @@ ipc
 "
 ]
 }
-websocket
-=
-"
-0
-.
-17
-"
