--- a/servo/components/script/Cargo.toml
+++ b/servo/components/script/Cargo.toml
@@ -759,6 +759,15 @@ servo
 "
 ]
 }
+servo
+-
+websocket
+=
+"
+0
+.
+18
+"
 smallvec
 =
 "
@@ -838,13 +847,6 @@ v4
 "
 ]
 }
-websocket
-=
-"
-0
-.
-17
-"
 xml5ever
 =
 {
