--- a/servo/components/net/Cargo.toml
+++ b/servo/components/net/Cargo.toml
@@ -288,6 +288,15 @@ path
 url
 "
 }
+servo
+-
+websocket
+=
+"
+0
+.
+18
+"
 threadpool
 =
 "
@@ -375,13 +384,6 @@ ipc
 "
 ]
 }
-websocket
-=
-"
-0
-.
-17
-"
 [
 target
 .
