Bug 1317223 (part 2) - add 'doctor' concept and move bookmark validation logic to it. r=tcsc
This patch defines the concept of a "doctor" for collections. The doctor is
responsible for running all validators and deciding whether or not to initiate
a repair request based on the validation results.

MozReview-Commit-ID: 6NLRE6L0OpA

UltraBlame original commit: 705939ae18f00dd3ccba81fc4e77acefdb51561f

--- a/.eslintignore
+++ b/.eslintignore
@@ -351,6 +351,14 @@ browser
 /
 components
 /
+privatebrowsing
+/
+*
+*
+browser
+/
+components
+/
 sessionstore
 /
 *
@@ -2208,6 +2216,15 @@ sync
 modules
 /
 constants
+.
+js
+services
+/
+sync
+/
+services
+-
+sync
 .
 js
 #
