--- a/devtools/client/debugger/new/test/mochitest/browser.ini
+++ b/devtools/client/debugger/new/test/mochitest/browser.ini
@@ -108,6 +108,13 @@ examples
 /
 doc
 -
+asm
+.
+html
+examples
+/
+doc
+-
 scripts
 .
 html
@@ -161,6 +168,15 @@ examples
 /
 doc
 -
+return
+-
+values
+.
+html
+examples
+/
+doc
+-
 sourcemaps
 .
 html
@@ -187,6 +203,11 @@ doc
 sources
 .
 html
+examples
+/
+asm
+.
+js
 examples
 /
 bogus
@@ -276,6 +297,13 @@ js
 [
 browser_dbg
 -
+asm
+.
+js
+]
+[
+browser_dbg
+-
 breaking
 .
 js
@@ -291,6 +319,11 @@ console
 .
 js
 ]
+skip
+-
+if
+=
+true
 [
 browser_dbg
 -
@@ -442,6 +475,18 @@ js
 [
 browser_dbg
 -
+returnvalues
+.
+js
+]
+skip
+-
+if
+=
+true
+[
+browser_dbg
+-
 searching
 .
 js
@@ -474,6 +519,11 @@ bogus
 .
 js
 ]
+skip
+-
+if
+=
+true
 [
 browser_dbg
 -
