Bug 1341589 - Test TriggeringPrincipal on history entry for view-source loads. r=gijs
UltraBlame original commit: 263c21fb73086f2ad4f0faa715f3669576c368ba

--- a/docshell/test/browser/browser.ini
+++ b/docshell/test/browser/browser.ini
@@ -5,6 +5,9 @@ support
 -
 files
 =
+dummy_page
+.
+html
 favicon_bug655270
 .
 ico
@@ -543,3 +546,8 @@ if
 =
 !
 e10s
+[
+browser_history_triggeringprincipal_viewsource
+.
+js
+]
