Bug 1339892 - Refactor mozIntl to have a nicer API and thin logic. r=smaug
MozReview-Commit-ID: J4QXXBy7JII

UltraBlame original commit: afd35703e5b01482e48fca74bfb29da982af5ec5

--- a/mobile/android/installer/package-manifest.in
+++ b/mobile/android/installer/package-manifest.in
@@ -2376,6 +2376,25 @@ components
 TVSimulatorService
 .
 manifest
+#
+ifdef
+ENABLE_INTL_API
+BINPATH
+/
+components
+/
+mozIntl
+.
+manifest
+BINPATH
+/
+components
+/
+mozIntl
+.
+js
+#
+endif
 ;
 Modules
 BINPATH
