--- a/browser/installer/package-manifest.in
+++ b/browser/installer/package-manifest.in
@@ -3372,6 +3372,25 @@ PresentationDataChannelSessionTransport
 .
 manifest
 #
+ifdef
+ENABLE_INTL_API
+RESPATH
+/
+components
+/
+mozIntl
+.
+manifest
+RESPATH
+/
+components
+/
+mozIntl
+.
+js
+#
+endif
+#
 if
 defined
 (
