Bug 1341277 - Part 3: Update ext-privacy.js to support disabling and re-enabling settings. r=aswan
MozReview-Commit-ID: 4Yf0uxsoXHP

UltraBlame original commit: ce4a71e11833f4ade0976842576e158224876ede

--- a/toolkit/components/extensions/test/xpcshell/xpcshell.ini
+++ b/toolkit/components/extensions/test/xpcshell/xpcshell.ini
@@ -332,6 +332,16 @@ test_ext_privacy
 js
 ]
 [
+test_ext_privacy_disable
+.
+js
+]
+[
+test_ext_privacy_update
+.
+js
+]
+[
 test_ext_runtime_connect_no_receiver
 .
 js
