Bug 1343744 - Set _INTL_API=no on Android's beta/release build. r=snorp
MozReview-Commit-ID: CbHY4j5wLTW

UltraBlame original commit: 77787eed3228f622654428ae53ff6ab12ff30d40

--- a/old-configure.in
+++ b/old-configure.in
@@ -47581,9 +47581,33 @@ dnl
 =
 =
 =
+if
+test
+"
+MOZ_WIDGET_TOOLKIT
+"
+!
+=
+"
+android
+"
+-
+o
+-
+z
+"
+RELEASE_OR_BETA
+"
+;
+then
 _INTL_API
 =
 yes
+else
+_INTL_API
+=
+no
+fi
 if
 test
 "
