--- a/mobile/android/base/Makefile.in
+++ b/mobile/android/base/Makefile.in
@@ -4936,23 +4936,6 @@ srcdir
 )
 /
 aidl
-aidl_geckoview_src_path
-:
-=
-(
-srcdir
-)
-/
-.
-.
-/
-geckoview
-/
-src
-/
-main
-/
-aidl
 aidl_target_path
 :
 =
@@ -4967,9 +4950,84 @@ mozilla
 gecko
 /
 media
-process_pkg
+(
+aidl_target_path
+)
+/
+(
+media_pkg
+)
+/
+%
+.
+java
 :
+(
+aidl_src_path
+)
+/
+(
+media_pkg
+)
+/
+%
+.
+aidl
+echo
+"
+Processing
+AIDL
+:
+<
 =
+>
+"
+(
+AIDL
+)
+-
+p
+(
+ANDROID_SDK
+)
+/
+framework
+.
+aidl
+-
+I
+(
+aidl_src_path
+)
+-
+o
+(
+aidl_target_path
+)
+<
+GECKOVIEW_AIDLS
+=
+\
+org
+/
+mozilla
+/
+gecko
+/
+IGeckoEditableChild
+.
+aidl
+\
+org
+/
+mozilla
+/
+gecko
+/
+IGeckoEditableParent
+.
+aidl
+\
 org
 /
 mozilla
@@ -4977,12 +5035,61 @@ mozilla
 gecko
 /
 process
+/
+IChildProcess
+.
+aidl
+\
 (
-aidl_target_path
+NULL
+)
+geckoview_aidl_src_path
+:
+=
+(
+topsrcdir
+)
+/
+mobile
+/
+android
+/
+geckoview
+/
+src
+/
+main
+/
+aidl
+geckoview_aidl_target_path
+:
+=
+generated
+geckoview_aidl_targets
+:
+=
+(
+addprefix
+(
+geckoview_aidl_target_path
 )
 /
 (
-media_pkg
+GECKOVIEW_AIDLS
+:
+.
+aidl
+=
+.
+java
+)
+)
+(
+geckoview_aidl_targets
+)
+:
+(
+geckoview_aidl_target_path
 )
 /
 %
@@ -4990,11 +5097,7 @@ media_pkg
 java
 :
 (
-aidl_src_path
-)
-/
-(
-media_pkg
+geckoview_aidl_src_path
 )
 /
 %
@@ -5024,66 +5127,11 @@ aidl
 -
 I
 (
-aidl_src_path
+geckoview_aidl_src_path
 )
 -
 o
 (
-aidl_target_path
-)
-<
-(
-aidl_target_path
-)
-/
-(
-process_pkg
-)
-/
-%
-.
-java
-:
-(
-aidl_geckoview_src_path
-)
-/
-(
-process_pkg
-)
-/
-%
-.
-aidl
-echo
-"
-Processing
-AIDL
-:
-<
-=
->
-"
-(
-AIDL
-)
--
-p
-(
-ANDROID_SDK
-)
-/
-framework
-.
-aidl
--
-I
-(
-aidl_geckoview_src_path
-)
--
-o
-(
-aidl_target_path
+geckoview_aidl_target_path
 )
 <
