Bug 1336757: Re-enable webnavigation and webrequest tests on infra. r=me
UltraBlame original commit: 11a578cf0754b42fdd3235570ccccb986a03b333

--- a/toolkit/components/extensions/test/mochitest/mochitest-common.ini
+++ b/toolkit/components/extensions/test/mochitest/mochitest-common.ini
@@ -487,41 +487,40 @@ os
 '
 android
 '
-subsuite
-=
-webrequest
 [
 test_ext_webrequest_background_events
 .
 html
 ]
-subsuite
-=
-webrequest
 [
 test_ext_webrequest_basic
 .
 html
 ]
-subsuite
-=
-webrequest
 [
 test_ext_webrequest_filter
 .
 html
 ]
-subsuite
+skip
+-
+if
 =
-webrequest
+os
+=
+=
+'
+android
+'
+#
+Too
+slow
+.
 [
 test_ext_webrequest_suspend
 .
 html
 ]
-subsuite
-=
-webrequest
 [
 test_ext_webrequest_upload
 .
@@ -543,9 +542,6 @@ fails
 in
 emulator
 tests
-subsuite
-=
-webrequest
 [
 test_ext_webrequest_permission
 .
@@ -556,17 +552,25 @@ test_ext_webnavigation
 .
 html
 ]
-subsuite
-=
-webnavigation
 [
 test_ext_webnavigation_filters
 .
 html
 ]
-subsuite
+skip
+-
+if
 =
-webnavigation
+os
+=
+=
+'
+android
+'
+#
+Too
+slow
+.
 [
 test_ext_window_postMessage
 .
