Bug 1337777: Add test for SDP answer without a=ssrc r=drno
MozReview-Commit-ID: 9YKjoeDSPFx

UltraBlame original commit: efaf63a68ee25b38782fbdd1f88d2943343d2e38

--- a/dom/media/tests/mochitest/mochitest.ini
+++ b/dom/media/tests/mochitest/mochitest.ini
@@ -1354,6 +1354,33 @@ on
 emulator
 )
 [
+test_peerConnection_captureStream_canvas_2d_noSSRC
+.
+html
+]
+skip
+-
+if
+=
+android_version
+=
+=
+'
+18
+'
+#
+android
+(
+Bug
+1319019
+timeouts
+on
+4
+.
+3
+emulator
+)
+[
 test_peerConnection_multiple_captureStream_canvas_2d
 .
 html
