--- a/devtools/client/debugger/new/test/mochitest/browser.ini
+++ b/devtools/client/debugger/new/test/mochitest/browser.ini
@@ -11,23 +11,22 @@ skip
 -
 if
 =
-(
-os
-=
-=
-'
-linux
-'
-&
-&
 debug
-&
-&
-bits
-=
-=
-32
-)
+#
+Disabled
+on
+debug
+platforms
+while
+tests
+are
+not
+run
+in
+debug
+on
+Github
+.
 support
 -
 files
@@ -108,6 +107,13 @@ examples
 /
 doc
 -
+asm
+.
+html
+examples
+/
+doc
+-
 scripts
 .
 html
@@ -161,6 +167,15 @@ examples
 /
 doc
 -
+return
+-
+values
+.
+html
+examples
+/
+doc
+-
 sourcemaps
 .
 html
@@ -187,6 +202,11 @@ doc
 sources
 .
 html
+examples
+/
+asm
+.
+js
 examples
 /
 bogus
@@ -276,6 +296,13 @@ js
 [
 browser_dbg
 -
+asm
+.
+js
+]
+[
+browser_dbg
+-
 breaking
 .
 js
@@ -291,6 +318,11 @@ console
 .
 js
 ]
+skip
+-
+if
+=
+true
 [
 browser_dbg
 -
@@ -436,6 +468,13 @@ pretty
 print
 -
 paused
+.
+js
+]
+[
+browser_dbg
+-
+returnvalues
 .
 js
 ]
