Bug 1342966 - Enable webgl mochitests for linux64-qr on graphics and m-c. r=dustin
MozReview-Commit-ID: HuayYeHImQC

UltraBlame original commit: ff0cdb8597366c181aa47fabbafbcf2086c9bc47

--- a/taskcluster/ci/test/test-sets.yml
+++ b/taskcluster/ci/test/test-sets.yml
@@ -365,6 +365,10 @@ mochitest
 -
 gpu
 -
+mochitest
+-
+webgl
+-
 reftest
 -
 reftest
@@ -580,64 +584,57 @@ debug
 cppunit
 -
 crashtest
--
-external
--
-media
--
-tests
--
-base
--
-external
--
-media
--
-tests
--
-youtube
+#
 -
 gtest
 -
-jittest
--
 jsreftest
+#
 -
 marionette
+#
 -
 mochitest
+#
 -
 mochitest
 -
 a11y
+#
 -
 mochitest
 -
 browser
 -
 chrome
+#
 -
 mochitest
 -
 chrome
+#
 -
 mochitest
 -
 clipboard
+#
 -
 mochitest
 -
 devtools
 -
 chrome
+#
 -
 mochitest
 -
 gpu
+#
 -
 mochitest
 -
 jetpack
+#
 -
 mochitest
 -
@@ -646,14 +643,17 @@ media
 mochitest
 -
 webgl
+#
 -
 reftest
+#
 -
 web
 -
 platform
 -
 tests
+#
 -
 web
 -
@@ -662,6 +662,7 @@ platform
 tests
 -
 reftests
+#
 -
 xpcshell
 macosx64
