--- a/taskcluster/ci/test/tests.yml
+++ b/taskcluster/ci/test/tests.yml
@@ -412,11 +412,6 @@ ccov
 opt
 :
 false
-macosx64
-/
-debug
-:
-true
 default
 :
 both
@@ -475,7 +470,7 @@ desktop_unittest
 py
 chunked
 :
-false
+true
 no
 -
 read
@@ -566,17 +561,6 @@ external
 media
 -
 tests
-unittest
--
-try
--
-name
-:
-'
-media
--
-tests
-'
 treeherder
 -
 symbol
@@ -727,17 +711,6 @@ b
 -
 t
 )
-unittest
--
-try
--
-name
-:
-media
--
-twitch
--
-tests
 e10s
 :
 false
@@ -880,17 +853,6 @@ media
 tests
 /
 youtube
-unittest
--
-try
--
-name
-:
-media
--
-youtube
--
-tests
 treeherder
 -
 symbol
@@ -1466,37 +1428,11 @@ windows
 *
 :
 1
-macosx
-.
-*
-:
-1
 default
 :
 6
 mozharness
 :
-chunked
-:
-by
--
-test
--
-platform
-:
-windows
-.
-*
-:
-false
-macosx
-.
-*
-:
-false
-default
-:
-true
 script
 :
 desktop_unittest
@@ -1652,12 +1588,12 @@ api
 /
 debug
 :
-100
+35
 android
 .
 *
 :
-40
+10
 windows
 .
 *
@@ -1671,11 +1607,6 @@ qr
 *
 :
 4
-macosx
-.
-*
-:
-2
 default
 :
 3
@@ -1707,11 +1638,6 @@ ccov
 opt
 :
 false
-macosx
-.
-*
-:
-true
 default
 :
 both
@@ -1847,9 +1773,6 @@ buildbot
 config
 :
 true
-chunked
-:
-true
 config
 :
 by
@@ -1908,26 +1831,6 @@ reftest
 suite
 =
 jsreftest
-when
-:
-files
--
-changed
-:
--
-js
-/
-src
-/
-*
-*
--
-js
-/
-public
-/
-*
-*
 marionette
 :
 description
@@ -2057,11 +1960,6 @@ ccov
 opt
 :
 false
-macosx
-.
-*
-:
-true
 default
 :
 both
@@ -2320,11 +2218,6 @@ android
 *
 :
 false
-macosx64
-/
-debug
-:
-true
 default
 :
 both
@@ -2625,7 +2518,7 @@ config
 true
 chunked
 :
-false
+true
 config
 :
 by
@@ -2801,11 +2694,6 @@ ccov
 opt
 :
 false
-macosx64
-/
-debug
-:
-true
 default
 :
 both
@@ -2862,9 +2750,6 @@ read
 buildbot
 -
 config
-:
-true
-chunked
 :
 true
 config
@@ -3247,6 +3132,11 @@ android
 *
 :
 2
+macosx
+.
+*
+:
+1
 default
 :
 3
@@ -3348,9 +3238,6 @@ buildbot
 config
 :
 true
-chunked
-:
-true
 config
 :
 by
@@ -3445,22 +3332,6 @@ instance
 size
 :
 xlarge
-e10s
-:
-by
--
-test
--
-platform
-:
-macosx64
-/
-debug
-:
-true
-default
-:
-both
 mozharness
 :
 by
@@ -3539,7 +3410,7 @@ config
 true
 chunked
 :
-false
+true
 config
 :
 by
@@ -3697,11 +3568,6 @@ windows
 *
 :
 8
-macosx
-.
-*
-:
-8
 default
 :
 10
@@ -3781,11 +3647,6 @@ windows
 *
 :
 false
-macosx64
-/
-debug
-:
-true
 default
 :
 both
@@ -3803,9 +3664,6 @@ read
 buildbot
 -
 config
-:
-true
-chunked
 :
 true
 config
@@ -4051,11 +3909,6 @@ android
 *
 :
 false
-macosx64
-/
-opt
-:
-both
 default
 :
 true
@@ -4137,7 +3990,7 @@ config
 true
 chunked
 :
-false
+true
 config
 :
 by
@@ -4317,7 +4170,7 @@ config
 true
 chunked
 :
-false
+true
 config
 :
 by
@@ -4428,22 +4281,6 @@ loopback
 video
 :
 true
-e10s
-:
-by
--
-test
--
-platform
-:
-macosx64
-/
-debug
-:
-true
-default
-:
-both
 instance
 -
 size
@@ -4475,11 +4312,6 @@ android
 *
 :
 3
-macosx64
-.
-*
-:
-1
 default
 :
 3
@@ -4565,19 +4397,6 @@ config
 :
 true
 chunked
-:
-by
--
-test
--
-platform
-:
-macosx64
-.
-*
-:
-false
-default
 :
 true
 config
@@ -4836,6 +4655,42 @@ desktop1604
 test
 "
 }
+run
+-
+on
+-
+projects
+:
+by
+-
+test
+-
+platform
+:
+linux64
+-
+qr
+/
+.
+*
+:
+[
+'
+graphics
+'
+'
+mozilla
+-
+central
+'
+]
+default
+:
+[
+'
+all
+'
+]
 chunks
 :
 by
@@ -4852,22 +4707,6 @@ android
 default
 :
 3
-e10s
-:
-by
--
-test
--
-platform
-:
-macosx
-.
-*
-:
-true
-default
-:
-both
 loopback
 -
 video
@@ -5273,16 +5112,11 @@ android
 *
 :
 16
-macosx64
-/
-opt
+macosx
+.
+*
 :
 1
-macosx64
-/
-debug
-:
-2
 default
 :
 8
@@ -5321,11 +5155,6 @@ ccov
 opt
 :
 false
-macosx
-.
-*
-:
-true
 default
 :
 both
@@ -5389,22 +5218,6 @@ read
 buildbot
 -
 config
-:
-true
-chunked
-:
-by
--
-test
--
-platform
-:
-macosx64
-/
-opt
-:
-false
-default
 :
 true
 config
@@ -5707,9 +5520,6 @@ mozilla
 -
 central
 '
-'
-try
-'
 ]
 linux64
 -
@@ -5733,9 +5543,6 @@ inbound
 mozilla
 -
 central
-'
-'
-try
 '
 ]
 e10s
@@ -7039,7 +6846,6 @@ tc
 -
 W
 (
-wpt
 )
 chunks
 :
@@ -7049,16 +6855,11 @@ test
 -
 platform
 :
-macosx64
-/
-opt
+macosx
+.
+*
 :
 5
-macosx64
-/
-debug
-:
-10
 default
 :
 12
@@ -7077,11 +6878,6 @@ ccov
 opt
 :
 false
-macosx
-.
-*
-:
-true
 default
 :
 both
@@ -7164,9 +6960,6 @@ read
 buildbot
 -
 config
-:
-true
-chunked
 :
 true
 config
@@ -7274,11 +7067,6 @@ windows
 *
 :
 false
-macosx
-.
-*
-:
-true
 default
 :
 both
@@ -7557,7 +7345,6 @@ tc
 -
 X
 (
-X
 )
 run
 -
