Bug 1285414 - Intermittent widget/tests/test_assign_event_data.html. disable for android debug. r=gbrown
UltraBlame original commit: 86e1748ab478e23f7a73e2c4af11a310d26fbda9

--- a/widget/tests/mochitest.ini
+++ b/widget/tests/mochitest.ini
@@ -26,11 +26,27 @@ toolkit
 "
 cocoa
 "
+|
+|
+(
+toolkit
+=
+=
+'
+android
+'
+&
+&
+debug
+)
 #
 Mac
 :
 Bug
 933303
+Android
+bug
+1285414
 [
 test_picker_no_crash
 .
